@@ -1,5 +1,14 @@
 2023-02-16  G. Branden Robinson <g.branden.robinson@gmail.com>
 
+	[ms]: Port a test to Solaris 11 sed.
+
+	* tmac/tests/s_TC-works-with-percent-in-custom-titles.sh: Put
+	newlines after opening braces in sed scripts.  macOS and GNU sed
+	tolerate their absence, but this sed does not.
+	* HACKING: Document this problem.
+
+2023-02-16  G. Branden Robinson <g.branden.robinson@gmail.com>
+
 	* src/roff/groff/groff.am (groff_TESTS) [!USE_GROHTML]: Don't
 	test the 'grohtml' driver if we know it won't work.
 
